2014-04-27  ajwillia.ms (Andy Williams)

        * Add simple build functions

2014-03-31 ajwillia.ms (Andy Williams)

	* Complete the features of the Basic text editor