@@ -10,6 +10,7 @@
 *.gcda
 
 /src/bin/edi
+/src/bin/edi_build
 /src/tests/edi_tests
 /data/desktop/edi.desktop
 /doc/edi.1
