@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-bin_PROGRAMS = edi
+bin_PROGRAMS = edi edi_build
 
 AM_CPPFLAGS = -DPACKAGE_DATA_DIR=\"$(datadir)/$(PACKAGE)\" \
 -I$(top_builddir)/src/bin/ \
@@ -17,6 +17,11 @@ edi_mainview.c \
 edi_main.c
 
 edi_LDADD = @EFL_LIBS@ $(top_builddir)/src/lib/libedi.la
+
+edi_build_SOURCES = \
+edi_build_main.c
+
+edi_build_LDADD = @EFL_LIBS@ $(top_builddir)/src/lib/libedi.la
 
 localedir = $(datadir)/locale
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
