@@ -1,6 +1,7 @@
 2014-04-27  ajwillia.ms (Andy Williams)
 
         * Add simple build functions
+	* Create an edi_build binary for command line building
 
 2014-03-31 ajwillia.ms (Andy Williams)
 
